[gd_scene load_steps=16 format=3 uid="uid://ranetadpnm52"]

[ext_resource type="Script" path="res://Enemies/Scripts/EnemyStateMachine.gd" id="1_i87ke"]
[ext_resource type="Script" path="res://Enemies/Scripts/States/IdleState.gd" id="2_ilt5c"]
[ext_resource type="Script" path="res://Enemies/Scripts/States/RunToPlayerState.gd" id="3_sao5r"]
[ext_resource type="Resource" uid="uid://dysn8brf1q41w" path="res://Enemies/VisualSounds/Step.tres" id="4_vret3"]
[ext_resource type="Script" path="res://Enemies/Scripts/States/PreparingState.gd" id="5_n3thi"]
[ext_resource type="Script" path="res://Enemies/Scripts/States/JumpAttackState.gd" id="6_e4jct"]
[ext_resource type="Resource" uid="uid://cjeq0xkgjm6pk" path="res://Enemies/Prefabs/JumpingEnemyAttack.tres" id="7_juqkf"]
[ext_resource type="Script" path="res://Enemies/Scripts/States/KnockedState.gd" id="8_hwqr0"]
[ext_resource type="Script" path="res://Enemies/Scripts/States/DeathState.gd" id="9_41lrt"]
[ext_resource type="Script" path="res://SoundVisual/VisualSoundEmiter.gd" id="10_oatbp"]
[ext_resource type="Texture2D" uid="uid://2wj6yv8a4a74" path="res://Sprites/Player/walk.png" id="11_6nngp"]
[ext_resource type="Script" path="res://SoundVisual/SoundPrint.gd" id="12_t4gs1"]
[ext_resource type="Script" path="res://Character/HealthComponent.gd" id="13_riw56"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8vo1v"]
radius = 18.0
height = 74.0

[sub_resource type="CircleShape2D" id="CircleShape2D_y4fym"]
radius = 15.0

[node name="JumpingEnemy" type="CharacterBody2D" node_paths=PackedStringArray("begining_state", "any_states")]
collision_layer = 4
script = ExtResource("1_i87ke")
begining_state = NodePath("states/idle")
any_states = [NodePath("states/death"), NodePath("states/knocked")]

[node name="states" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="idle" type="Node2D" parent="states" node_paths=PackedStringArray("collision_shape_2d", "player_detected_state")]
script = ExtResource("2_ilt5c")
collision_shape_2d = NodePath("../../CollisionShape2D")
player_detected_state = NodePath("../run")
see_distance = 1000.0

[node name="RayCast2D" type="RayCast2D" parent="states/idle"]
collision_mask = 5

[node name="run" type="Node2D" parent="states" node_paths=PackedStringArray("navigation_agent", "when_close_state", "lost_interest_state")]
script = ExtResource("3_sao5r")
navigation_agent = NodePath("../../NavigationAgent2D")
movement_speed = 130.0
close_distance = 150.0
when_close_state = NodePath("../preparing")
lost_interest_state = NodePath("../idle")
min_walking_time = 1.0
step_sound = ExtResource("4_vret3")

[node name="RayCast2D" type="RayCast2D" parent="states/run"]
collision_mask = 5

[node name="step_timer" type="Timer" parent="states/run"]
wait_time = 0.4
autostart = true

[node name="interest_time" type="Timer" parent="states/run"]
wait_time = 7.0
one_shot = true

[node name="min_walking_timer" type="Timer" parent="states/run"]

[node name="preparing" type="Node2D" parent="states" node_paths=PackedStringArray("next_state")]
script = ExtResource("5_n3thi")
next_state = NodePath("../attack")
animation = "pre"

[node name="Timer" type="Timer" parent="states/preparing"]
wait_time = 0.8
one_shot = true

[node name="attack" type="Node2D" parent="states" node_paths=PackedStringArray("after_attack_state")]
script = ExtResource("6_e4jct")
attack_info = ExtResource("7_juqkf")
after_attack_state = NodePath("../idle")

[node name="Timer" type="Timer" parent="states/attack"]
wait_time = 0.7
one_shot = true

[node name="hit_area" type="Area2D" parent="states/attack"]
collision_layer = 0
collision_mask = 8

[node name="hit_collision" type="CollisionShape2D" parent="states/attack/hit_area"]
position = Vector2(0, -21)
shape = SubResource("CapsuleShape2D_8vo1v")
disabled = true

[node name="knocked" type="Node2D" parent="states" node_paths=PackedStringArray("state_after")]
script = ExtResource("8_hwqr0")
state_after = NodePath("../run")

[node name="death" type="Node2D" parent="states" node_paths=PackedStringArray("health_component")]
script = ExtResource("9_41lrt")
health_component = NodePath("../../health_component")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 2.0
target_desired_distance = 2.0
path_max_distance = 1000.0
avoidance_layers = 0
avoidance_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y4fym")

[node name="sound_emiter" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("10_oatbp")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 0, 1, 1)
position = Vector2(0, -40)
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_6nngp")
hframes = 6

[node name="Area2D" type="Area2D" parent="Sprite2D"]
position = Vector2(0, 200)
scale = Vector2(5, 5)
collision_layer = 0
collision_mask = 2
script = ExtResource("12_t4gs1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(0, -21)
shape = SubResource("CapsuleShape2D_8vo1v")

[node name="animator" type="AnimationPlayer" parent="Sprite2D"]
unique_name_in_owner = true

[node name="health_component" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
script = ExtResource("13_riw56")
hp = 3
max_hp = 3

[node name="hitbox" type="CollisionShape2D" parent="health_component"]
position = Vector2(0, -21)
shape = SubResource("CapsuleShape2D_8vo1v")

[connection signal="timeout" from="states/run/step_timer" to="states/run" method="_on_step_timer_timeout"]
[connection signal="timeout" from="states/run/interest_time" to="states/run" method="_on_invoke_time_timeout"]
[connection signal="timeout" from="states/run/min_walking_timer" to="states/run" method="_on_min_walking_timer_timeout"]
[connection signal="timeout" from="states/preparing/Timer" to="states/preparing" method="timer_timeout"]
[connection signal="timeout" from="states/attack/Timer" to="states/attack" method="_on_timer_timeout"]
[connection signal="area_entered" from="states/attack/hit_area" to="states/attack" method="_on_hit_area_area_entered"]
[connection signal="on_take_damage" from="health_component" to="states/knocked" method="on_take_damage"]
